--- a/src/main/resources/templates/home/adminHome.html
+++ b/src/main/resources/templates/home/adminHome.html
@@ -50,7 +50,7 @@
     <div class="container">
         <div class="header_top_left">
             <ul>
-                <li>&copy; 全景NBA</li>
+                <li>&copy; File-Share</li>
             </ul>
         </div>
         <div class="header_top_right" th:if="${session.user}!=null">
@@ -103,7 +103,7 @@
                         <li><a href="/gotoreleaseNotice" target="_top" class="hvr-bounce-to-bottom">发布公告</a></li>
                         <li><a href="/seeUsers" target="_top" class="hvr-bounce-to-bottom">查看用户列表</a></li>
                         <li><a href="/share" target="_top" class="hvr-bounce-to-bottom">上传稿件</a></li>
-                        <li><a href="/seeShare" target="_top" class="hvr-bounce-to-bottom">稿件浏览</a></li>
+                        <li><a href="/adminSeeShare" target="_top" class="hvr-bounce-to-bottom">稿件浏览</a></li>
                         <li><a href="/seeNotice" target="_top" class="hvr-bounce-to-bottom">查看公告</a></li>
                         <li><a href="/setting" target="_top" class="hvr-bounce-to-bottom">个人设置</a></li>
 
@@ -137,249 +137,6 @@
         </div>
     </div>
 
-    <!-- about -->
-    <div class="about">
-        <div class="container">
-            <div class="about-grids">
-                <div class="col-md-5 about-grid-left">
-                    <img src="../home/images/2.png" alt=" " class="img-responsive"/>
-                </div>
-                <div class="col-md-7 about-grid-right">
-                    <h3>关于篮球</h3>
-                    <h4>About Basketball About NBA.</h4>
-                    <p>篮球（basketball），是奥运会核心比赛项目，是以手为中心的对抗性体育运动[1] 。
-                        篮球运动，起源于美国。1891年12月21日，由美国马萨诸塞州斯普林菲尔德基督教青年会训练学校（现译名为美国春田大学，Springfield
-                        College）体育教师詹姆士·奈史密斯发明。1896年，篮球运动传入中国
-                        1904年，圣路易斯奥运会上第1次进行了篮球表演赛。1936年，篮球在柏林奥运会中被列为正式比赛项目。1992年，巴塞罗那奥运会开始，职业选手可以参加奥运会篮球比赛[1-2] 。
-                        主要的国际性篮球组织是成立于1932年总部设在瑞士日内瓦的国际篮球联合会（国际业余篮球联合会）。</p>
-                    <div class="team">
-                        <h5>杰出篮球运动员</h5>
-                        <div class="team-grids">
-                            <div class="col-md-4 team-grid1">
-                                <div class="team-grid">
-                                    <ul class="demo-3">
-                                        <li>
-                                            <figure>
-                                                <img src="../home/images/1.jpg" alt="" class="img-responsive"/>
-                                                <figcaption>
-                                                    <p>1963年2月17日生于美国纽约布鲁克林，前美国职业篮球运动员，司职得分后卫，绰号“飞人”（Air Jordan）</p>
-                                                </figcaption>
-                                            </figure>
-                                        </li>
-                                    </ul>
-                                    <div class="team-grid-pos">
-                                        <p>迈克尔·乔丹<span>Michael Jordan</span></p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 team-grid1">
-                                <div class="team-grid">
-                                    <ul class="demo-3">
-                                        <li>
-                                            <figure>
-                                                <img src="../home/images/2.jpg" alt="" class="img-responsive"/>
-                                                <figcaption>
-                                                    <p>
-                                                        1978年8月23日出生于美国宾夕法尼亚州费城，司职得分后卫/小前锋（锋卫摇摆人），绰号“黑曼巴”/“小飞侠”，整个NBA生涯全部效力于洛杉矶湖人队</p>
-                                                </figcaption>
-                                            </figure>
-                                        </li>
-                                    </ul>
-                                    <div class="team-grid-pos">
-                                        <p>科比·布莱恩特<span>Kobe Bryant</span></p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 team-grid1">
-                                <div class="team-grid">
-                                    <ul class="demo-3">
-                                        <li>
-                                            <figure>
-                                                <img src="../home/images/3.jpg" alt="" class="img-responsive"/>
-                                                <figcaption>
-                                                    <p>1982年1月17日出生于美国伊利诺伊州芝加哥，司职得分后卫，效力于NBA迈阿密热火队，绰号“闪电侠”（The
-                                                        Flash）</p>
-                                                </figcaption>
-                                            </figure>
-                                        </li>
-                                    </ul>
-                                    <div class="team-grid-pos">
-                                        <p>德怀恩·韦德<span>Dwyane Wade</span></p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-    </div>
-    <!-- //about -->
-    <!-- participating-teams -->
-    <div class="participating-teams">
-        <div class="container">
-            <div class="col-md-6 participating-teams-left">
-                <h3>NBA著名球馆 <span>篮球圣地</span></h3>
-                <h4>篮球界的耶路撒冷</h4>
-                <div class="participating-teams-left-grids">
-                    <div class="participating-teams-left-grid">
-                        <div class="col-xs-4 participating-teams-left-grid-left">
-                            <img class="img-responsive" src="../home/images/8.jpg" alt=""/>
-                        </div>
-                        <div class="col-xs-8 participating-teams-left-grid-right">
-                            <h5>纽约</h5>
-                            <a href="single.html">麦迪逊花园球馆</a>
-                            <p>有126年历史的麦迪逊广场花园，它是纽约的门脸。</p>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="participating-teams-left-grid">
-                        <div class="col-xs-4 participating-teams-left-grid-left">
-                            <img class="img-responsive" src="../home/images/9.jpg" alt=""/>
-                        </div>
-                        <div class="col-xs-8 participating-teams-left-grid-right sub">
-                            <h5>洛杉矶</h5>
-                            <a href="single.html">斯台普斯中心</a>
-                            <p>斯台普斯中心在每年举办超过250场的活动，拥有近400万人次的游客。</p>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="participating-teams-left-grid">
-                        <div class="col-xs-4 participating-teams-left-grid-left">
-                            <img class="img-responsive" src="../home/images/10.jpg" alt=""/>
-                        </div>
-                        <div class="col-xs-8 participating-teams-left-grid-right">
-                            <h5>芝加哥</h5>
-                            <a href="single.html">联合中心</a>
-                            <p>位于美国芝加哥的室内运动中心，名字由赞助商联合航空公司而来。它同时是国家冰上曲棍球联盟芝加哥黑鹰队和NBA芝加哥公牛队的主场</p>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 participating-teams-right">
-                <h3>NBA大事件</h3>
-                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingOne">
-                            <h4 class="panel-title">
-                                <a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion"
-                                   href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i
-                                        class="glyphicon glyphicon-minus" aria-hidden="true"></i>乔丹总决赛绝杀爵士
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
-                             aria-labelledby="headingOne">
-                            <div class="panel-body">
-                                1998年，总决赛第6场比赛，公牛做客爵士主场，乔丹从马龙手中断球成功，并在终场前5.8秒晃飞拉塞尔跳投命中绝杀，最终公牛系列赛以4-2淘汰爵士，实现第二次三连冠，八年内6次戴上总冠军戒指。
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingTwo">
-                            <h4 class="panel-title">
-                                <a class="pa_italic collapsed" role="button" data-toggle="collapse"
-                                   data-parent="#accordion" href="#collapseTwo" aria-expanded="false"
-                                   aria-controls="collapseTwo">
-                                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i
-                                        class="glyphicon glyphicon-minus" aria-hidden="true"></i>张伯伦单场100分
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel"
-                             aria-labelledby="headingTwo">
-                            <div class="panel-body">
-                                在1962年3月3日，张伯伦所在的费城勇士队遇上了尼克斯队，那场比赛他打满48分钟，最终63投36中（命中率为57.1%）、罚球32罚28中（命中率87.5%），爆砍100分和25个篮板，另外还有2次助攻和2次犯规。
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingThree">
-                            <h4 class="panel-title">
-                                <a class="pa_italic collapsed" role="button" data-toggle="collapse"
-                                   data-parent="#accordion" href="#collapseThree" aria-expanded="false"
-                                   aria-controls="collapseThree">
-                                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i
-                                        class="glyphicon glyphicon-minus" aria-hidden="true"></i>麦迪35秒13分
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
-                             aria-labelledby="headingThree">
-                            <div class="panel-body">
-                                2004年12月9日，在休斯顿丰田中心球场，特雷西·麦克格雷迪在比赛最后时刻，35秒狂砍13分，分别是35秒时一个三分，24.3秒时一个三加一（三分加一个罚球)，11.2秒时一个三分，及最后1.7秒时一个三分绝杀，火箭神奇般的以81-80战胜马刺。
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingFour">
-                            <h4 class="panel-title">
-                                <a class="pa_italic collapsed" role="button" data-toggle="collapse"
-                                   data-parent="#accordion" href="#collapseFour" aria-expanded="false"
-                                   aria-controls="collapseFour">
-                                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i
-                                        class="glyphicon glyphicon-minus" aria-hidden="true"></i>科比单场81分
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseFour" class="panel-collapse collapse" role="tabpanel"
-                             aria-labelledby="headingFour">
-                            <div class="panel-body">
-                                2006年1月23日常规赛湖人对阵猛龙，科比·布莱恩特拿下81分，其中三分球13投7中，罚球20罚18中，此外还抢下了6个篮板，创现役球员单场得分纪录，联盟历史单场第二高分。
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingFive">
-                            <h4 class="panel-title">
-                                <a class="pa_italic collapsed" role="button" data-toggle="collapse"
-                                   data-parent="#accordion" href="#collapseFive" aria-expanded="false"
-                                   aria-controls="collapseFive">
-                                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i
-                                        class="glyphicon glyphicon-minus" aria-hidden="true"></i>韦德This Is My House
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseFive" class="panel-collapse collapse" role="tabpanel"
-                             aria-labelledby="headingFive">
-                            <div class="panel-body">
-                                2009年3月9日，热火对阵公牛的比赛中，韦德在第二次加时终场哨声吹响之前，跑投三分绝杀公牛，冲上技术统计看台，指着迈阿密主场说“This Is My House”
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingSix">
-                            <h4 class="panel-title">
-                                <a class="pa_italic collapsed" role="button" data-toggle="collapse"
-                                   data-parent="#accordion" href="#collapseSix" aria-expanded="false"
-                                   aria-controls="collapseSix">
-                                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i
-                                        class="glyphicon glyphicon-minus" aria-hidden="true"></i>雷阿伦总决赛关键三分
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseSix" class="panel-collapse collapse" role="tabpanel"
-                             aria-labelledby="headingSix">
-                            <div class="panel-body">
-                                2013年总决赛第六场，雷-阿伦在常规时间结束前5.9秒投中一记三分，挽救了热火，最终在加时以103-100击败马刺，将总比分扳成3-3
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
-    <!-- //participating-teams -->
-    <!-- about-bottom -->
-
-    <!-- //about-bottom -->
     <!-- footer -->
     <div class="footer">
         <div class="container">
