--- a/src/main/resources/templates/login-signin/signin.html
+++ b/src/main/resources/templates/login-signin/signin.html
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="header_top_left">
             <ul>
-                <li>&copy; 全景NBA</li>
+                <li>&copy; File-Share</li>
             </ul>
         </div>
         <div class="header_top_right">
