--- a/src/main/resources/templates/setting/seeUser.html
+++ b/src/main/resources/templates/setting/seeUser.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="layout">
 <head>
-    <title>查看故事</title>
+    <title>查看用户</title>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta charset="UTF-8">
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="header_top_left">
             <ul>
-                <li>&copy; 全景NBA</li>
+                <li>&copy; File-Share</li>
             </ul>
         </div>
         <div class="header_top_right" th:if="${session.user}!=null">
